Major restructuring and RESTful API extending

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.jpa.hibernate.ddl-auto=none
 spring.datasource.initialization-mode=always
 spring.datasource.platform=postgres
 spring.datasource.url=jdbc:postgresql:postgres
-spring.datasource.username=postgres
-spring.datasource.password=123
+spring.datasource.username=application_user
+spring.datasource.password=2tPxADfKWV57Us5
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
