Extended Web API; Fixed bugs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 spring.main.banner-mode=off
 logging.level.org.springframework=ERROR
 
+server.tomcat.connection-timeout = 5m
+server.servlet.session.timeout = 15m
+
 spring.jpa.hibernate.ddl-auto=none
 
 spring.datasource.initialization-mode=always
